test/typecheck/errors/bad-views8.boa
view sv6 {
	o: output sum[string][string] of int;
}

v := sv6/o;

c := v._4;
